--- a/index.html
+++ b/index.html
@@ -30,40 +30,4 @@
 
 		<h1>Ghosts' Town</h1>
 
-		<section>
-			<h2>Episodes</h2>
-
-
-			<img src="GT poster.jpg" width="400" height="400" alt="Ghosts' Town cover art. Stu Parker,
-			Zeke Arthurs, Valorie Thorne, and Guy Gough stand on a bluff overlooking Tiskwat lake">
-
-		</section>
-
-
-</div>
-
-
-<p>
-Stu Parker makes a music/business deal in the woods, Valorie Thorne starts work at her new job, and Zeke Arthurs has a normal day at work. All three find themself in the center of an unusual murder scene, made stranger since the victim was already dead.
-</p>
-<p>
-Content warnings:<ul>
-<li>Cursing</li>
-<li>Murder</li>
-<li>Brief Gore</li>
-<li>Mentions of Sex</li>
-</ul>
-</p>
-<p>
-Full vod: <a href =”https://www.youtube.com/watch?v=JutU7U3_yms” target="_blank">https://www.youtube.com/watch?v=JutU7U3_yms</a>
-</p>
-<p>
-Complete <a href=”https://www.youtube.com/watch?v=wIyI69bQl5c&list=PL_BRSNtrU-0hKsJNDPr0PsjiuZfgJ3N2C” target="_blank">Surf & Turf</a> playlist (the previous campaign)
-</p>
-
-
-
-
-
-	</body>
-</html>
+	<p>Luna will make this look nicer at somepoint</p>
