--- a/index.html
+++ b/index.html
@@ -29,5 +29,12 @@
 <div style="background-color:white;">
 
 		<h1>Ghosts' Town</h1>
-
+<p>
+	<h2> Episodes</h2>
+</p>
+	<h3>Episode 1 - S1E1: Whatever Happened to Rutger Horse?</h3>
+		<audio controls>
+										<source src="https://media.githubusercontent.com/media/MeaslyMedia/GhostsTown/refs/heads/main/mp3s/GTep1draft3.mp3" />
+									</audio>
 	<p>Luna will make this look nicer at somepoint</p>
+
