--- a/index.html
+++ b/index.html
@@ -7,22 +7,10 @@
 
 <!-- this is for the paralax effect -->
 		<style>
-			.fixed-bg {
-				background-image: url("GT poster.jpg");
-				background-repeat:no-repeat;
-				min-height: 100vh;
-  			background-size: cover;
-				background-position: 50% 75%;
-				background-attachment: fixed;
-				background-color: #cccccc;
-				alt="Ghosts' Town cover art. Stu Parker,
-			Zeke Arthurs, Valorie Thorne, and Guy Gough stand on a bluff overlooking Tiskwat lake"
-			}
+
 			</style>
 	</head>
 	<body>
-
-
 
 		<div class="fixed-bg"></div>
 
@@ -30,14 +18,17 @@
 
 		<h1>Ghosts' Town</h1>
 	<br>
+	<div class ="intro">
 	Chokepoint, British Columbia is a wet, unassuming city along Canada's Sunshine Coast. While few people pay the city much mind, it is a hotbed for the supernatural, and many souls find themselves lingering here well after they die. One fatefull 2009 fall evening, Stu Parker, Valorie Thorne, and Zeke Arthurs find themselves embroiled in a ghostly affairs beyond their pay grade. Ghosts' Town is an actual play, horror, comedy, TTRPG podcast misusing the Monster of the Week system by Evil Hat Games.
+	<div>
 <p>
+	<div class="box">
 	<h2> Episodes</h2>
 </p>
-	<h3>Episode 1 - S1E1: Whatever Happened to Rutger Horse?</h3>
+
+	<h3>S1E1: Whatever Happened to Rutger Horse?</h3>
 		<audio controls>
 										<source src="https://media.githubusercontent.com/media/MeaslyMedia/GhostsTown/refs/heads/main/mp3s/GTep1draft3.mp3" />
 									</audio>
+</div>
 	<p>Luna will make this look nicer at somepoint</p>
-
-
