--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 		<link rel="stylesheet" href="style.css">
 		<title>Ghosts' Town</title>
 		<meta name="description" content="Ghosts' Town TTRPG podcast">
-		<meta name="viewport" content="minmum-scale=1"/>
+		<meta name="viewport" content="height=device-height,
+	                      width=device-width, initial-scale=1.0,
+	                      minimum-scale=1.0, maximum-scale=1.0,
+	                      user-scalable=no, target-densitydpi=device-dpi">
 <!-- this is for the paralax effect -->
 	</head>
 
@@ -30,4 +33,5 @@
 </div>
 
 </body>
+
 
