--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 				<div id="episodes"> </div>
 				
 			</div>
-			<p>Thanks to Alex for help with the audio player!!</p></br>
-			Luna will make this look nicer at somepoint
+			<p>Thanks to Alex for help with the audio player!!</br>
+			Luna will make this look nicer at somepoint</p>
 		</div>
 
 		<!-- Generate the RSS feed -->
@@ -35,6 +35,7 @@
 	</body>
 
 </html>
+
 
 
 
