--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 	<body>
 		<div class="body-bg"></div>
+		<div class="container">
 			<div class="sticky-header">
 		<h1>Ghosts' Town</h1>
 			</div>
@@ -32,12 +33,15 @@
 			Luna will make this look nicer at somepoint</p>
 		
 		</div>
+		</div>
+
 
 		<!-- Generate the RSS feed -->
 		<script src="rssParser.js"></script>
 	</body>
 
 </html>
+
 
 
 
