--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 	<body>
 		<div class="body-bg"></div>
+		<div class="container">
 		<h1 class="sticky-header">Ghosts' Town</h1>
 		<div class ="mainbox">
 			<div class ="intro">
@@ -30,6 +31,7 @@
 			Luna will make this look nicer at somepoint</p>
 		
 		</div>
+		</div>
 
 
 		<!-- Generate the RSS feed -->
@@ -37,6 +39,7 @@
 	</body>
 
 </html>
+
 
 
 
