--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
 	<body>
 		<div class="body-bg"></div>
-		<h1 class="sticky-header">Ghosts' Town</h1>
+		<div class="sticky-header">
+		<h1>Ghosts' Town</h1>
+		</div>
 		<div class ="mainbox">
 			<div class ="intro">
 				<b>Chokepoint</b>, British Columbia is a wet, unassuming city along Canada's Sunshine Coast. While few people pay the city much mind, it is a hotbed for the supernatural, and many souls find themselves lingering here well after they die. One fatefull 2009 fall evening, Stu Parker, Valorie Thorne, and Zeke Arthurs find themselves embroiled in a ghostly affairs beyond their pay grade. Ghosts' Town is an actual play, horror, comedy, TTRPG podcast misusing the Monster of the Week system by Evil Hat Games.
@@ -38,6 +40,7 @@
 	</body>
 
 </html>
+
 
 
 
